<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />

        <item android:icon="@drawable/icon_shuttle"
            android:id="@+id/nav_transport"
            android:title="@string/transport"
            android:checked="true"/>
         <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_lecturehall"
            android:icon="@drawable/icon_lecturehall"
            android:title="@string/lecture_hall" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings" />
    </group>

    <item android:title="@string/transport"
        android:icon="@drawable/icon_shuttle">
        <menu>
            <item
                android:id="@+id/nav_shuttle_ncbs_iisc"
                android:title="@string/route_ncbs_iisc" />
            <item
                android:id="@+id/nav_shuttle_iisc_ncbs"
                android:title="@string/route_iisc_ncbs" />
            <item
                android:id="@+id/nav_shuttle_ncbs_mandara"
                android:title="@string/route_ncbs_mandara" />
            <item
                android:id="@+id/nav_shuttle_mandara_ncbs"
                android:title="@string/route_mandara_ncbs" />
            <item
                android:id="@+id/nav_buggy"
                android:title="@string/buggy" />
            <item
                android:id="@+id/nav_shuttle_ncbs_icts"
                android:title="@string/route_ncbs_icts" />
            <item
                android:id="@+id/nav_shuttle_icts_ncbs"
                android:title="@string/route_icts_ncbs" />
            <item
                android:id="@+id/nav_shuttle_ncbs_cbl"
                android:title="@string/route_ncbs_cbl" />
        </menu>
    </item>



</menu>
