<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />

        <item android:icon="@drawable/icon_shuttle"
            android:id="@+id/nav_transport"
            android:title="@string/transport" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/icon_updates"
            android:title="@string/event_updates"
            android:checked="true"/>
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_experimental"
            android:icon="@drawable/icon_experimental"
            android:title="@string/experimental" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings" />
    </group>

    <item
        android:title="Experimental">
        <menu>
            <item android:id="@+id/nav_registration"
                android:icon="@drawable/icon_register"
                android:title="@string/settings_change_notification_preference"/>
        </menu>
    </item>


</menu>
