<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_transport"
        android:icon="@drawable/icon_transport"
        android:title="@string/transport" />
    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/icon_call"
        android:title="@string/contacts" />
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/icon_information"
        android:title="@string/information" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings" />

</menu>