<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_upper_group">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/dashboard" />
    </group>

    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/icon_shuttle"
            android:title="@string/transport" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/icon_updates"
            android:title="@string/event_updates" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_experimental"
            android:icon="@drawable/icon_experimental"
            android:title="@string/experimental" />
        <item
            android:id="@+id/nav_offline_location"
            android:icon="@drawable/icon_lecturehall"
            android:title="@string/lecture_hall" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
    </group>

    <group>
        <item
            android:id="@+id/nav_change_mode"
            android:icon="@drawable/icon_wifi_on"
            android:title="@string/settings_change_mode" />
    </group>

        <item
            android:checkable="false"
            android:enabled="false"
            android:titleCondensed="@string/navigation_footer"
            android:title="@string/navigation_footer" />

</menu>