<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rohitsuratekar.NCBSinfo.activity.Information"
    tools:showIn="@layout/app_bar_information">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/information_aboutus"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="About us"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_us"
            android:id="@+id/about_us_text"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/information_conditions"
        android:gravity="center"
        android:layout_above="@+id/information_aboutus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Terms and Conditions"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terms"
            android:id="@+id/terms_and_conditions"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/information_faqs"
        android:gravity="center"
        android:layout_alignTop="@+id/information_aboutus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Frequenty Asked Questions"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/faq"
            android:id="@+id/faq_text"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
